# TheBook

./: .gitignore  Cargo.toml  Dockerfile  build-client.sh  docker-compose.yml  x86_64-unknown-linux-gnu.tar
client/: .env.client.example  Cargo.toml
client/src/: character_sheet.rs  fetcher.rs  lib.rs  main.rs  player_creator.rs  player_logger.rs
client/src/auth/: player_creator.rs  player_logger.rs  session.rs
client/src/prompt/: error.rs  prompt.rs  select.rs
client/src/show/: character_sheet.rs  main.rs  show_assault.rs  show_fight_replay.rs  show_self_critical_hit.rs  show_turn_summary.rs
client/src/view/: finished_tournaments.rs  inventory_view.rs  main_view.rs  player_auth.rs  register_to_tournament.rs  shop_view.rs  view_error.rs  warrior_management.rs  warriors_view.rs
main/: Cargo.toml
server/: Cargo.toml  Dockerfile  docker-compose.yml  server-setup.sh
server/src/: lib.rs  main.rs
server/src/auth/: error.rs  session.rs  signup.rs
server/src/http/: app.rs
server/src/player/: error.rs  gen_random_warrior.rs  manager.rs  read.rs  remove_warrior.rs  shop.rs  tournaments.rs
server/src/replay/: fight_replay.rs  manager.rs  public.rs  round_replay.rs  tournament_replay.rs
server/src/repository/: file_repository.rs  player_repository.rs
server/src/shop/: error.rs  manager.rs  public.rs
server/src/tournament/: auto_tournament.rs  bot_player_builder.rs  fight.rs  fight_reward.rs  manager.rs  public.rs
server/src/warrior/: manager.rs
server/tests/: mod.rs
server/tests/players/: mod.rs  remove_warriors.rs
server/tests/repository/: mod.rs  (+1 more)
(+303 files in other folders)
