[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
uuid = { version = "1.9.*", features = ["v4", "serde"] }
shared = { path = "../shared" }
server = { path = "../server" }
ureq = { version = "2.10", features = ["json"] }
dotenv = "0.15"
