[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
uuid = { version = "1.9.*", features = ["v4", "serde"] }
shared = { path = "../shared" }
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "net"] }
